project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-project
  template:
    metadata:
      labels:
        app: kube-project
    spec:
      containers:
        - name: kube-project-api
          image: salamy1/project-api:v1.10
          volumeMounts:
            - name: random-image
              mountPath: /usr/src/app/files
        - name: kube-project-client
          image: salamy1/project-client:v1.11
      volumes:
        - name: random-image
          persistentVolumeClaim:
            claimName: project-claim
