project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: kube-project-svc
spec:
  type: NodePort
  selector:
    app: kube-project
  ports:
    - name: api
      port: 2345 
      protocol: TCP
      targetPort: 4000
    - name: client
      port: 2346
      protocol: TCP
      targetPort: 3000
