project/manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: pg-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: pg
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: pg-ss
spec:
  serviceName: pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec:
      containers:
        - name: pg
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        namespace: project 
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
