project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: kube-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: 
                name: kube-project-svc
                port:
                  number: 2345
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: kube-project-svc
                port:
                  number: 2346
